# raylib-cmake-template

./: CMakeLists.txt
sources/: main.cpp
